--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
-            <li><a href="#">Other</a></li>
+            <li><a href="movie.html">My favourite albums</a></li>
             </ol>
             </nav>
         </header>
