--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="main">
         <article class="content" id="welcome"> 
                 <h3>This is Mao's Portfolio</h3>
-                <img src="IMG_7375.JPG" style="width:600px">
+                <img src="IMG_7375.JPG">
                 <p> Hello, I am Mao. I am from Tokyo Japan but lived in Auckland New Zealand.
                  Here is a photo of the beach near my house
                 </p>
