--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <meta name="viewport"
+content="width=device-width">
         <meta charset="utf-8">
         <title>Mao's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="css/layout.css">
