--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@ content="width=device-width">
                  <article class="content" id="video">
                  <h4>Videos</h4>
                  <p>video from engineering design</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nOjPPpBtJZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="image-left embed-video">
+                 <div class="videoWrapper">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/nOjPPpBtJZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </div>
+           <p>video from engineering design</p>
+           </div>
+           
             </article>
                   <aside id="sidebar">
                 <h3>Mao</h3>
