--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ content="width=device-width">
                  <article class="content" id="video">
                  <h4>Videos</h4>
                  <p>video from engineering design</p>
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/nOjPPpBtJZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/nOjPPpBtJZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
             </article>
                   <aside id="sidebar">
                 <h3>Mao</h3>
