--- a/hobbies.html
+++ b/hobbies.html
@@ -17,30 +17,34 @@ content="width=device-width">
             <li><a href="index.html">Home</a></li>
             <li><a href="http://www.ict-kanazawa.ac.jp" target="_blank">About ICT</a></li>
             <li><a href="movie.html">My favourite albums</a></li>
-            <li><a href="hobbies.html">Things I like</a></li>
             </ol>
             </nav>
         </header>
         <div id="main">
         <article class="content" id="welcome"> 
-                <h3>This is Mao's Portfolio</h3>
-                <img src="IMG_7375.JPG">
-                <p> Hello, I am Mao. I am from Tokyo Japan but lived in Auckland New Zealand.
-                 Here is a photo of the beach near my house
-                </p>
-                </article>
-                 <article class="content" id="summer project">
-                 <h3>Summer project</h3>
-                <nav id="photo">
-                <a href="ohotos.png" target="new"> <img src="ohotos.png" style="width:300px"> </a>
-                 </nav>
-                 <p> I grew mould on bread for a week to find which bread had the most preservatives </p>
-                 </article>
-                 <article class="content" id="video">
-                 <h4>Videos</h4>
-                 <p>video from engineering design</p>
-           <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/nOjPPpBtJZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
+               <table>
+<caption>Things I Like</caption>
+<thead>
+<th>Name</th>
+<th>Description</th>
+<th>More Info</th>
+</thead>
+<tr>
+<th>Beagles</th> 
+<td>Beagles are a dog breed, they are used as sniffer dogs at the airport</td>
+  <td><a href="https://dogtime.com/dog-breeds/beagle#/slide/1">link</a>
+  </tr>
+<tr>
+  <th>Nobu</th>
+  <td>Nobu is a sushi chain, my favourite thing there is the kampachi</td>
+  <td><a href="https://noburestaurants.com/tokyo/home/">link</a>
+</tr>
+<tr>
+  <th>Heron Preston</th>
+  <td>I like wearing and buying Heron Preston clothes!</td>
+  <td><a href="https://www.nubian-ave.com/?mode=cate&cbid=2294580&csid=0&sort=n">link</a>
+  </tr>
+  </table>
             </article>
                   <aside id="sidebar">
                 <h3>Mao</h3>
