--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ content="width=device-width">
 
                 <div class="image-left embed-video">
                  <div class="videoWrapper">
-           <iframe width="560" height="315" src="https://www.youtube.com/embed/nOjPPpBtJZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/nOjPPpBtJZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
            </div>
      
            </div>
