--- a/hobbies.html
+++ b/hobbies.html
@@ -30,17 +30,17 @@ content="width=device-width">
 <th>More Info</th>
 </thead>
 <tr>
-<th>Beagles</th> 
+<td>Beagles</td> 
 <td>Beagles are a dog breed, they are used as sniffer dogs at the airport</td>
   <td><a href="https://dogtime.com/dog-breeds/beagle#/slide/1">link</a>
   </tr>
 <tr>
-  <th>Nobu</th>
+  <td>Nobu</td>
   <td>Nobu is a sushi chain, my favourite thing there is the kampachi</td>
   <td><a href="https://noburestaurants.com/tokyo/home/">link</a>
 </tr>
 <tr>
-  <th>Heron Preston</th>
+  <td>Heron Preston</td>
   <td>I like wearing and buying Heron Preston clothes!</td>
   <td><a href="https://www.nubian-ave.com/?mode=cate&cbid=2294580&csid=0&sort=n">link</a>
   </tr>
