--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@ content="width=device-width">
                  <article class="content" id="video">
                  <h4>Videos</h4>
                  <p>video from engineering design</p>
+                 <h5>STEM Project</h5>
+                 <p><a href="2x2_matrix.html">2x2 Matrix Inverse</a></p>
+                 <p>I wanted to make an inverse of a 2x2 matrix</p>
 
           
 
