--- a/index.html
+++ b/index.html
@@ -30,18 +30,22 @@ content="width=device-width">
                 </p>
                 </article>
                  <article class="content" id="summer project">
-                 <h3>Summer project</h3>
+                 <h3>STEM project</h3>
                 <nav id="photo">
                 <a href="ohotos.png" target="new"> <img src="ohotos.png" style="width:300px"> </a>
                  </nav>
                  <p> I grew mould on bread for a week to find which bread had the most preservatives </p>
                  </article>
+              <article class="content" id="programming">
+                  <h5>Programming</h5>
+                 <p><a href="2x2_matrix.html">2x2 Matrix Inverse</a></p>
+                 <p>I wanted to make an inverse of a 2x2 matrix</p></article>
+
+
                  <article class="content" id="video">
                  <h4>Videos</h4>
                  <p>video from engineering design</p>
-                 <h5>STEM Project</h5>
-                 <p><a href="2x2_matrix.html">2x2 Matrix Inverse</a></p>
-                 <p>I wanted to make an inverse of a 2x2 matrix</p>
+                
 
           
 
